# Testing-task-checkbox

./: .env.dist  .gitignore  Makefile  README.MD  alembic.ini  config.py  docker-compose.yml  pyproject.toml
api/: app.py  dependencies.py  exceptions.py  models.py
api/handlers/: receipts_api.py
api/routers/: __init__.py  auth_api.py  receipts_api.py
database/migrations/: env.py
database/migrations/versions/: 00c662a08d7a_move_comment_to_receipt.py  0dc01a31b63a_init_db.py  7e3ee62e98e6_init_db.py  8bf4be2f1aa6_remove_some_constraints.py  d486159cbf3a_init_db.py
database/models/: __init__.py  base.py  receipts.py  users.py
database/repo/: payments.py  receipts.py  requests.py  users.py
database/requests/: base.py  receipts.py  requests.py  users.py
docker/: api.Dockerfile
services/: auth.py  receipts.py
tests/: test_auth.py  test_receipts.py
