[tool.poetry]
name = "checkbox-test-task"
version = "0.1.0"
description = ""
authors = ["latan <latand666@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
fastapi = "^0.110.3"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
httpx = "^0.27.0"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
