[tool.poetry]
name = "checkbox-test-task"
version = "0.1.0"
description = ""
authors = ["latan <latand666@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
fastapi = "^0.110.3"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
uvicorn = "^0.29.0"
bcrypt = "4.0.1"


[tool.poetry.group.dev.dependencies]
httpx = "^0.27.0"
pytest = "^8.2.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
